# BigBallsRoll

./: .clang-format  .doxyconf  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  export.off
.jenkins/: send.sh
.travis/: build.sh  cppcheck.sh  cppsupp.txt  install-cmake.sh  install.sh  runtests.sh
lib/: CMakeLists.txt
lib/Physics/: CMakeLists.txt  README.md
lib/Physics/src/: boxCollider.c  colliderManager.c  collisionBody.c  collisionBodyManager.c  collisionDetection.c  collisionResolution.c  collisuinResolution.c  dynamicArray.c  mathsCommon.c  physicsDebug.c  physicsEngine.c  physicsMathsCommon.c  physicsWorld.c  sphereCollider.c  unitTests.c
lib/Physics/src/include/BigBalls/: boxCollider.h  colliderManager.h  collisionBody.h  collisionBodyManager.h  collisionDetection.h  collisionResolution.h  dynamicArray.h  mathsCommon.h  physicsDebug.h  physicsEngine.h  physicsMathsCommon.h  physicsWorld.h  sphereCollider.h  unitTests.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/libcester/: CMakeLists.txt  README.MD
lib/lua/: CMakeLists.txt
lib/lua/src/: lcode.c  lmathlib.c  loslib.c  lvm.c  lzio.c
lib/stb/: CMakeLists.txt  stb_vorbis.h
lib/stb_image/: CMakeLists.txt
res/Loader/: modelloading.txt  soundloading.txt  textureloading.txt
res/Model/: Ball.mtl  Ball_menu.mtl  cone.off
res/Model/Off/: bluecube.off  bone.off  darkbluecube.off  debugSphere.off  greencube.off  redcube.off  wirecube.off
res/Model/Terrain/: Corner_1.mtl  Ramp_1.mtl
res/Script/: ArcBallCamera.lua  BallSpawner.lua  EndNode.lua  Player.lua  StartNode.lua  config.lua  game.lua  levelGenerator.lua  light.lua  logo.lua  mainMenu.lua
src/: CMakeLists.txt  camera.h  main.c  main.h
src/Engine/: GUI.h  InputManager.c  InputManager.h  OpenGL.c  OpenGL.h  camera.c  camera.h  engine.c  engine.h  gameObject.c  gameObject.h  guiManager.c  guiManager.h  luaHelper.c  luaHelper.h  modelManager.c  modelManager.h  nuklear.h  playerConfig.c  playerConfig.h  skybox.c  skybox.h  stateManager.c  stateManager.h  textureManager.c  textureManager.h
src/Engine/Audio/: audioEngine.c  audioEngine.h  audioManager.c  audioManager.h  sound.c  sound.h
src/Engine/GameObjects/: gameObject.c  gameObject.h
src/Engine/Physics/: physicsInterface.c  physicsInterface.h  physicsLuaInterface.c  physicsLuaInterface.h
src/Helper/: stringHelper.c  stringHelper.h  stringPath.c  stringPath.h  token.c  token.h
src/Math/: extraMath.c  extraMath.h  transform.c  transform.h  vec3.c  vec3.h  vectorMath.c  vectorMath.h
src/ObjLoader/: model.c  model.h  modelDebug.h  modelLoader.c  modelLoader.h  modelLoading.c  objLoader.c  objLoader.h
src/Scene/ClosingScreen/: closingScreen.c  closingScreen.h
src/Scene/Game/: game.c  game.h
src/Scene/LevelOne/: LevelOne.c  LevelOne.h
src/Scene/MainMenu/: MainMenu.c  mainMenu.c  mainMenu.h
src/UnitTest/: ModelUnitTests.h  cester.h  unitTestEntry.c  unitTestEntry.h
src/helper/: stringHelper.c  stringPath.h  token.c  token.h
src/objloader/: model.c  model.h  objLoader.c  objLoader.h
src/tests/: ModelUnitTests.c  ModelUnitTests.h  PhysicsUnitTests.c  PhysicsUnitTests.h  tests.c  tests.h
tests/: CMakeLists.txt  main.c
