set(PROJECT_NAME lua)
project(${PROJECT_NAME} LANGUAGES C)

set(LUA_HEADERS
        "src/lapi.h"
        "src/lauxlib.h"
        "src/lcode.h"
        "src/lctype.h"
        "src/ldebug.h"
        "src/ldo.h"
        "src/lfunc.h"
        "src/lgc.h"
        "src/ljumptab.h"
        "src/llex.h"
        "src/llimits.h"
        "src/lmem.h"
        "src/lobject.h"
        "src/lopcodes.h"
        "src/lopnames.h"
        "src/lparser.h"
        "src/lprefix.h"
        "src/lstate.h"
        "src/lstring.h"
        "src/ltable.h"
        "src/ltm.h"
        "src/lua.h"
        "src/luaconf.h"
        "src/lualib.h"
        "src/lundump.h"
        "src/lvm.h"
        "src/lzio.h"
)

set(LUA_SOURCES
        "src/lapi.c"
        "src/lauxlib.c"
        "src/lbaselib.c"
        "src/lcode.c"
        "src/lcorolib.c"
        "src/lctype.c"
        "src/ldblib.c"
        "src/ldebug.c"
        "src/ldo.c"
        "src/ldump.c"
        "src/lfunc.c"
        "src/lgc.c"
        "src/linit.c"
        "src/liolib.c"
        "src/llex.c"
        "src/lmathlib.c"
        "src/lmem.c"
        "src/loadlib.c"
        "src/lobject.c"
        "src/lopcodes.c"
        "src/loslib.c"
        "src/lparser.c"
        "src/lstate.c"
        "src/lstring.c"
        "src/lstrlib.c"
        "src/ltable.c"
        "src/ltablib.c"
        "src/ltm.c"
        "src/lua.c"
        "src/luac.c"
        "src/lundump.c"
        "src/lutf8lib.c"
        "src/lvm.c"
        "src/lzio.c"
)

add_library(${PROJECT_NAME} ${LUA_HEADERS} ${LUA_SOURCES})
target_sources(${PROJECT_NAME} PRIVATE src/)
target_include_directories(lua PUBLIC src/)
